[package]
name = "easytier-wsrelay"
version = "0.1.0"
edition = "2021"
authors = ["EasyTier Contributors"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8" }
worker-macros = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
prost-types = "0.13"
hex = "0.4"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
] }

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = "z"
lto = true
